[package]
name = "share_these"
version = "0.1.0"
edition = "2021"
authors = ["n-WN"]
description = "A simple file sharing web server"
license = "MPL-2"
repository = "https://github.com/n-WN/share_these"
readme = "README.md"

[dependencies]
# "?" is shorter than ".unwrap()"
anyhow = "1.0.97"
# full features because of laziness
tokio = { version = "1.44.1", features = ["full"] }
# import the greatest framework
axum = { version = "0.8.1" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }

[profile.release]
lto = true          # Link Time Optimization
opt-level = "z"     # Optimize for size
codegen-units = 1   # Single-threaded compilation
debug = false       # No debug info
panic = "abort"     # Abort on panic
strip = true        # Strip symbols
